- 0004507: [graph] No time-line in the summary for cumulative by days (thraxisp)
- 0004429: [localization] Slovene national characters not displayed correctly (Jeroen Latour)
- 0004423: [localization] Parse error in strings_hungarian.txt line 974 (Victor Boctor)
- 0004509: [localization] Request rather than "Provide Feedback to Issue" (thraxisp)
- 0004435: [other] Auto-preview of attached images is broken (Victor Boctor)
- 0004478: [upgrade] database upgrade from 0.18.3 problem: upgrade-ID "filters-db1" does not work on mySQL4.1.3b-beta (Jeroen Latour)
- Updated Italian, French, Portuguese Brazil, Lithuanian, Korean, Czech, Swedish, Spanish, German and Dutch translations

2004.08.28  -  0.19.0rc1

This is the first release candidate for 0.19.0, it requires database upgrade.  We consider this release considerably more stable than the 0.19.0a2.  This is a feature complete release, hence, 0.19.0 is not expected to include new features, but only bug fixes.

- 0002416: [security] Block Denied Access (masc)
- 0003540: [security] Arbitrary code execution through uploads (thraxisp)
- 0004062: [security] Multiple Cross Site Scripting Vulnerabilities (Victor Boctor)
- 0004063: [security] Possible E-Mail Bomber (masc)
- 0004183: [security] another xss issue (Narcissus)
- 0004239: [security] Remote PHP Code execution (Paul)
- 0004276: [security] cross site scripting issue (jlatour)
- 0004277: [security] cross site scripting issue (jlatour)
- 0000633: [feature] email lost password page (masc)
- 0003371: [feature] CVS Integration (patch included) (Victor Boctor)
- 0004137: [feature] Support a simple "view" URL (Victor Boctor)
- 0004145: [feature] Mantis pages should have descriptive titles (Victor Boctor)
- 0004266: [feature] Update project documentation file (jlatour)
- 0004122: [relationships] Upgrade script seems to swap the duplicate relationship (masc)
- 0004146: [relationships] Summary doesn't unescape(?) characters (masc)